# PaddleOcean

./: .gitignore  .pre-commit-config.yaml  QWEN.md  README.md  README.zh-CN.md  README.zh-TW.md  _check_exports.py  last.ckpt  pyproject.toml
.github/workflows/: ci-tests.yml
.qwen/: training-behavior.md
.qwen/skills/: add-callback.md  add-compat-fallback.md  add-strategy.md  aistudio-cloud-upload.md  local-ci.md  xpu-p800-setup.md
memory/project/: cloud_upload_simple.md
ocean/: __init__.py  cli.py  cloud.py  datamodule.py  distributed.py  gear.py  gear_wrappers.py  model.py  trainer.py
ocean/_compat/: __init__.py  sot.py  tensor.py  version.py
ocean/accelerators/: __init__.py  accelerator.py  cpu.py  cuda.py  custom_device.py  ipu.py  rocm.py  xpu.py
ocean/callbacks/: __init__.py  batch_size_finder.py  callback.py  checkpoint.py  device_stats.py  device_stats_monitor.py  early_stopping.py  finetuning.py  gradient_accumulation_scheduler.py  lambda_function.py  lr_finder.py  lr_monitor.py  model_summary.py  on_exception_checkpoint.py  prediction_writer.py  rich_model_summary.py  spike.py  stochastic_weight_avg.py  swa.py  throughput_monitor.py  timer.py  weight_averaging.py
ocean/core/: hooks.py  mixins.py  optimizer.py  saving.py
ocean/loggers/: __init__.py  base.py  comet.py  csv_logs.py  mlflow.py  ocelogger.py  tensorboard.py  utilities.py  visualdl.py  wandb.py
ocean/loops/: __init__.py  fetchers.py  (+7 more)
tests/: conftest.py  test_api_coverage.py  test_comprehensive.py  test_gan.py  test_metrics.py  test_multi_gpu.py  test_smoke.py  test_xpu_smoke.py
(+84 files in other folders)
