[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"


[project]
name = "paddle-ocean"
version = "0.1.0"
description = "A high-level PaddlePaddle framework inspired by PyTorch Lightning"
requires-python = ">=3.9"
dependencies = [
    "paddlepaddle>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.15.0",
    "pre-commit>=3.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [".git", ".github"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N"]
ignore = ["E501"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
filterwarnings = ["ignore::UserWarning"]
